--- a/kmeans/run36.ipynb
+++ b/kmeans/run36.ipynb
@@ -64,15 +64,15 @@
     "region = sess.boto_session.region_name\n",
     "image = f'{account}.dkr.ecr.{region}.amazonaws.com/{prefix}:latest'\n",
     "\n",
-    "estimator = sage.estimator.Estimator(\n",
+    "kmeans_estimator = sage.estimator.Estimator(\n",
     "    image, \n",
     "    role, \n",
     "    1, \n",
     "    'ml.c4.2xlarge', \n",
-    "    output_path=\"s3://{}/{}/output\".format(sess.default_bucket(), prefix),\n",
+    "    output_path=\"s3://{}/{}/kmeans_output\".format(sess.default_bucket(), prefix),\n",
     "    sagemaker_session=sess)\n",
     "\n",
-    "estimator.fit(data_location)"
+    "kmeans_estimator.fit(data_location)"
    ]
   },
   {
@@ -81,7 +81,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DOWNLOAD MODEL AND SHOW CLASSES FOUND"
+    "import tarfile\n",
+    "import boto3\n",
+    "from io import BytesIO\n",
+    "import pickle\n",
+    "\n",
+    "s3 = boto3.resource('s3')\n",
+    "path = \"{}/kmeans_output/{}/output/model.tar.gz\".format(prefix, kmeans_estimator.latest_training_job.job_name)\n",
+    "bucket = s3.Bucket(sess.default_bucket())\n",
+    "compressed = BytesIO()\n",
+    "bucket.download_fileobj(path, compressed)\n",
+    "compressed.seek(0)\n",
+    "tar = tarfile.open(\"r:gz\", fileobj=compressed)\n",
+    "f = tar.extractfile('kmeans.sav')\n",
+    "m = pickle.load(f, encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(x,y,c=m.labels_)"
    ]
   },
   {
@@ -91,7 +113,7 @@
    "outputs": [],
    "source": [
     "from sagemaker.predictor import csv_serializer\n",
-    "predictor = estimator.deploy(1, 'ml.m4.xlarge', serializer=csv_serializer)"
+    "kmeans_predictor = kmeans_estimator.deploy(1, 'ml.m4.xlarge', serializer=csv_serializer)"
    ]
   },
   {
@@ -101,10 +123,8 @@
    "outputs": [],
    "source": [
     "input = \"\"\"x1,x2\n",
-    "-2,-5\n",
-    "2,10\n",
-    "0,0\"\"\"\n",
-    "r = predictor.predict(input).decode('utf-8')\n",
+    "-10,-10\"\"\"\n",
+    "r = kmeans_pred]\\\\ictor.predict(input).decode('utf-8')\n",
     "print(r)"
    ]
   },
