--- a/lstm/run36.ipynb
+++ b/lstm/run36.ipynb
@@ -51,15 +51,15 @@
     "region = sess.boto_session.region_name\n",
     "image = f'{account}.dkr.ecr.{region}.amazonaws.com/{prefix}:latest'\n",
     "\n",
-    "estimator = sage.estimator.Estimator(\n",
+    "lstm_estimator = sage.estimator.Estimator(\n",
     "    image, \n",
     "    role, \n",
     "    1, \n",
     "    'ml.c4.2xlarge', \n",
-    "    output_path=\"s3://{}/output\".format(sess.default_bucket()),\n",
+    "    output_path=\"s3://{}/{}/lstm_output\".format(sess.default_bucket(), prefix),\n",
     "    sagemaker_session=sess)\n",
     "\n",
-    "estimator.fit(data_location)"
+    "lstm_estimator.fit(data_location)"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = estimator.deploy(1, 'ml.m4.xlarge')"
+    "lstm_predictor = lstm_estimator.deploy(1, 'ml.m4.xlarge')"
    ]
   },
   {
@@ -77,23 +77,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = list(range(1,101))\n",
+    "l = list(range(0,100))\n",
     "s = \",\".join(map(str, l))\n",
     "b = bytearray(s, \"utf-8\")\n",
     "\n",
-    "b_response = predictor.predict(b)\n",
+    "b_response = lstm_predictor.predict(b)\n",
     "\n",
     "s_response = b_response.decode(\"utf-8\") \n",
     "l_response = s_response.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(l_response)"
    ]
   },
   {
